@@ -2,7 +2,7 @@ package Module::Provision;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.41.%d', q$Rev: 2 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.41.%d', q$Rev: 3 $ =~ /\d+/gmx );
 
 use Moo;
 
@@ -15,6 +15,7 @@ with    q(Module::Provision::TraitFor::CPANDistributions);
 with    q(Module::Provision::TraitFor::VCS);
 with    q(Module::Provision::TraitFor::AddingFiles);
 with    q(Module::Provision::TraitFor::Badges);
+with    q(Module::Provision::TraitFor::EnvControl);
 
 1;
 
@@ -38,7 +39,7 @@ Module::Provision - Create Perl distributions with VCS and selectable toolchain
 
 =head1 Version
 
-This documents version v0.41.$Rev: 2 $ of L<Module::Provision>
+This documents version v0.41.$Rev: 3 $ of L<Module::Provision>
 
 =head1 Synopsis
 
