@@ -1,5 +1,6 @@
 Revision history for Module::Provision                           .
 
+          - Adds trace method to control environment variables
           - Boilerplate now also pattern matches hosts
 
 0.41.1    2016-04-04 13:14:24
